<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculadora</string>
    <string name="action_settings">Settings</string>

	<string name="mais">+</string>
	<string name="menos">-</string>
	<string name="div">:</string>
	<string name="mult">*</string>
	<string name="clear">CE</string>
	<string name="n1">Valor 1:</string>
	<string name="n2">Valor 2:</string>
	<string name="result">resultado</string>
	
	
</resources>
